# qa-auto-engineer-python-project-241

./: .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: tests.yml
docs/: demo.html  index.html  json.cast  json_out.cast  plain.cast  yaml.cast
gendiff/: __init__.py  generate_diff.py  load_json.py  loader.py  main.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
tests/: test_gendiff.py  test_plain_gendiff.py
